implement about.html view

--- a/about.html
+++ b/about.html
@@ -161,30 +161,17 @@
           <!--Card-->
           <div class="card mb-4">
 
-            <!--Grid row-->
-            <div class="row d-flex justify-content-center">
-              <!--Device column-->
-              <div class="col-md-9 pt-5">
-                <h2 class="text-center text-dark mb-4 pb-2">Mission</h2>
-                <p class="lead text-center dark-grey-text w-responsive mx-2 mb-5">Create fun, high-quality video games to grow the industry in Mexico;
-                  willing to learn and teach to work in general!.</p>
-              </div>
-              <!--Device column-->
 
-            </div>
-            <!--Grid row-->
+            <h2 class="text-center text-dark mb-4 pb-2">Mission</h2>
+            <p class="lead text-center dark-grey-text w-responsive mx-auto mb-5">Create fun, high-quality video games to grow the industry in Mexico;
+              willing to learn and teach to work in general!.</p>
 
-            <!--Grid row-->
-            <div class="row d-flex justify-content-center">
-              <!--Grid column-->
-              <div class="col-md-9 p-5">
-                <h2 class="text-center text-dark mb-4 pb-2">Vision</h2>
-                <p class="lead text-center dark-grey-text w-responsive mx-2 mb-5">Be the leading study in the development of
-                  video games, virtual and augmented reality in Mexico.</p>
-              </div>
-              <!--Grid column-->
-            </div>
-            <!--Grid row-->
+
+
+            <h2 class="text-center text-dark mb-4 pb-2">Vision</h2>
+            <p class="lead text-center dark-grey-text w-responsive mx-auto mb-5">Be the leading study in the development of
+              video games, virtual and augmented reality in Mexico.</p>
+
 
 
 
@@ -195,7 +182,7 @@
             <h2 class=" text-center dark-grey-text pb-2">Our Team</h2>
             <hr class="w-header my-4">
             <!-- Section description -->
-            <p class="lead text-center text-muted pt-2  mx-2 mb-5">Enim ad minim exercitation ullamco laboris nisi ut ex aliquip.</p>
+            <p class="lead text-center text-muted pt-2 mb-5">Enim ad minim exercitation ullamco laboris nisi ut ex aliquip.</p>
 
             <!-- Grid row -->
             <div class="row text-center dark-grey-text my-5 p-5">
@@ -203,7 +190,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-280 mx-auto mb-4">
+                <div class="w-200 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
                 <div class="mini-avatar mx-auto mb-1">
@@ -224,7 +211,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-280 mx-auto mb-4">
+                <div class="w-200 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Tommy Brian</h6>
@@ -242,7 +229,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-280 mx-auto mb-4">
+                <div class="w-200 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(15).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Kate Witson</h6>
@@ -265,7 +252,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-280 mx-auto mb-4">
+                <div class="w-200 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(7).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Barbara Lenny</h6>
@@ -283,7 +270,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-280 mx-auto mb-4">
+                <div class="w-200 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(29).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Barbara Lenny</h6>
@@ -301,7 +288,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-280 mx-auto mb-4">
+                <div class="w-200 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Barbara Lenny</h6>
