--- a/about.html
+++ b/about.html
@@ -161,32 +161,41 @@
           <!--Card-->
           <div class="card mb-4">
 
-            <div class="row pb-2">
-              <h2 class="text-center text-dark mb-4 pb-2 pt-5">Mission</h2>
-              <p class="lead text-center dark-grey-text w-responsive mx-auto mb-5">Create fun, high-quality video games to grow the industry in Mexico;
-                willing to learn and teach to work in general!.</p>
+            <!--Grid row-->
+            <div class="row d-flex justify-content-center">
+              <!--Device column-->
+              <div class="col-md-9 pt-5">
+                <h2 class="text-center text-dark mb-4 pb-2">Mission</h2>
+                <p class="lead text-center dark-grey-text w-responsive mx-auto mb-5">Create fun, high-quality video games to grow the industry in Mexico;
+                  willing to learn and teach to work in general!.</p>
+              </div>
+              <!--Device column-->
+
             </div>
+            <!--Grid row-->
 
-
-            <div class="row pb-2">
-              <h2 class="text-center text-dark mb-4 pb-2 pt-5">Vision</h2>
-              <p class="lead text-center dark-grey-text w-responsive mx-auto mb-5">Be the leading study in the development of
-                video games, virtual and augmented reality in Mexico.</p>
+            <!--Grid row-->
+            <div class="row d-flex justify-content-center">
+              <!--Grid column-->
+              <div class="col-md-9 p-5">
+                <h2 class="text-center text-dark mb-4 pb-2">Vision</h2>
+                <p class="lead text-center dark-grey-text w-responsive mx-auto mb-5">Be the leading study in the development of
+                  video games, virtual and augmented reality in Mexico.</p>
+              </div>
+              <!--Grid column-->
             </div>
+            <!--Grid row-->
 
 
 
 
 
-
-
-
-            <h6 class="font-weight-bold text-center grey-text text-uppercase small mb-4 pt-5">Team</h6>
+            <h6 class="font-weight-bold text-center grey-text text-uppercase small mb-4">Team</h6>
             <!-- Section heading -->
             <h2 class=" text-center dark-grey-text pb-2">Our Team</h2>
             <hr class="w-header my-4">
             <!-- Section description -->
-            <p class="lead text-center text-muted mb-5">Enim ad minim exercitation ullamco laboris nisi ut ex aliquip.</p>
+            <p class="lead text-center text-muted pt-2 mb-5">Enim ad minim exercitation ullamco laboris nisi ut ex aliquip.</p>
 
             <!-- Grid row -->
             <div class="row text-center dark-grey-text my-5 p-5">
@@ -194,10 +203,10 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-200 mx-auto mb-4">
+                <div class="w-280 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
-                <div class="mini-avatar mx-auto">
+                <div class="mini-avatar mx-auto mb-1">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Alicia Deyns</h6>
@@ -215,11 +224,8 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-200 mx-auto mb-4">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
-                </div>
-                <div class="mini-avatar mx-auto">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
+                <div class="w-280 mx-auto mb-4">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Tommy Brian</h6>
                 <small class="text-muted">Co-funder & CTO</small>
@@ -236,11 +242,8 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-200 mx-auto mb-4">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(15).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
-                </div>
-                <div class="mini-avatar mx-auto">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
+                <div class="w-280 mx-auto mb-4">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(15).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Kate Witson</h6>
                 <small class="text-muted">Lead Developer</small>
@@ -262,11 +265,8 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-200 mx-auto mb-4">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(7).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
-                </div>
-                <div class="mini-avatar mx-auto">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
+                <div class="w-280 mx-auto mb-4">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(7).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Barbara Lenny</h6>
                 <small class="text-muted">Designer</small>
@@ -283,11 +283,8 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-200 mx-auto mb-4">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(29).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
-                </div>
-                <div class="mini-avatar mx-auto">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
+                <div class="w-280 mx-auto mb-4">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(29).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Barbara Lenny</h6>
                 <small class="text-muted">Designer</small>
@@ -304,11 +301,8 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-200 mx-auto mb-4">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
-                </div>
-                <div class="mini-avatar mx-auto">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
+                <div class="w-280 mx-auto mb-4">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Barbara Lenny</h6>
                 <small class="text-muted">Designer</small>
