--- a/about.html
+++ b/about.html
@@ -206,7 +206,9 @@
                 <div class="w-200 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
-
+                <div class="mini-avatar mx-auto mb-4">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
+                </div>
                 <h6 class="font-weight-bold">Alicia Deyns</h6>
                 <small class="text-muted">Co-funder & CEO</small>
                 <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
@@ -225,6 +227,9 @@
                 <div class="w-200 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
+                <div class="mini-avatar mx-auto mb-4">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
+                </div>
                 <h6 class="font-weight-bold">Tommy Brian</h6>
                 <small class="text-muted">Co-funder & CTO</small>
                 <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
@@ -242,6 +247,9 @@
 
                 <div class="w-200 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(4).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
+                </div>
+                <div class="mini-avatar mx-auto mb-4">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Kate Witson</h6>
                 <small class="text-muted">Lead Developer</small>
@@ -266,6 +274,9 @@
                 <div class="w-200 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(7).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
+                <div class="mini-avatar mx-auto mb-4">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
+                </div>
                 <h6 class="font-weight-bold">Barbara Lenny</h6>
                 <small class="text-muted">Designer</small>
                 <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
@@ -284,6 +295,9 @@
                 <div class="w-200 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(8).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
+                <div class="mini-avatar mx-auto mb-4">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
+                </div>
                 <h6 class="font-weight-bold">Barbara Lenny</h6>
                 <small class="text-muted">Designer</small>
                 <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
@@ -301,6 +315,9 @@
 
                 <div class="w-200 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
+                </div>
+                <div class="mini-avatar mx-auto mb-4">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Barbara Lenny</h6>
                 <small class="text-muted">Designer</small>
