--- a/about.html
+++ b/about.html
@@ -206,7 +206,7 @@
                 <div class="w-200 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
-                <div class="mini-avatar mx-auto mb-4">
+                <div class="mini-avatar mx-auto">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Alicia Deyns</h6>
@@ -267,7 +267,7 @@
             <!-- Grid row -->
 
             <!-- Grid row -->
-            <div class="row text-center dark-grey-text my-5 p-5">
+            <div class="row text-center dark-grey-text my-5 px-5">
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
