--- a/about.html
+++ b/about.html
@@ -203,7 +203,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-200 mx-auto mb-2">
+                <div class="w-200 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
                 <div class="mini-avatar mx-auto">
@@ -212,7 +212,7 @@
                 <h6 class="font-weight-bold">Alicia Deyns</h6>
                 <small class="text-muted">Co-funder & CEO</small>
                 <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
-                <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
+                <ul class="list-unstyled d-flex justify-content-center mb-0 red-text">
                   <li><i class="fab fa-twitter mx-2"></i></li>
                   <li><i class="fab fa-facebook-f mx-2"></i></li>
                   <li><i class="fab fa-instagram mx-2"></i></li>
