--- a/about.html
+++ b/about.html
@@ -211,8 +211,8 @@
                 </div>
                 <h6 class="font-weight-bold">Alicia Deyns</h6>
                 <small class="text-muted">Co-funder & CEO</small>
-                <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
-                <ul class="list-unstyled d-flex justify-content-center mb-0 red-text">
+                <p class="text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
+                <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
                   <li><i class="fab fa-twitter mx-2"></i></li>
                   <li><i class="fab fa-facebook-f mx-2"></i></li>
                   <li><i class="fab fa-instagram mx-2"></i></li>
