implement about.html view

--- a/about.html
+++ b/about.html
@@ -211,7 +211,7 @@
                 </div>
                 <h6 class="font-weight-bold">German Pérez</h6>
                 <small class="text-muted">SouFUN Co-funder</small>
-                <p class="mt-3 text-muted">Passionate about
+                <p class="mt-3 text-muted text-justify">Passionate about
                   languages ​​and also
                   programming languages. My strengths are Unity,
                   Blender and Substance Painter, java and python.
