implement about.html view

--- a/about.html
+++ b/about.html
@@ -203,24 +203,27 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-200 mx-auto mb-4">
+                <div class="w-200 mx-auto mb-4 danger">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
-                <div class="mini-avatar mx-auto">
+                <div class="mini-avatar mx-auto success">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
-                <h6 class="font-weight-bold">German Pérez</h6>
-                <small class="text-muted">SouFUN Co-funder</small>
-                <p class="mt-3 text-muted text-justify">Passionate about
-                  languages ​​and also
-                  programming languages. My strengths are Unity,
-                  Blender and Substance Painter, java and python.
-                  Programming is an art in which the limit is your imagination</p>
-                <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
-                  <li><i class="fab fa-twitter mx-2"></i></li>
-                  <li><i class="fab fa-facebook-f mx-2"></i></li>
-                  <li><i class="fab fa-instagram mx-2"></i></li>
-                </ul>
+                <div class="text-justify px-5">
+                  <h6 class="font-weight-bold">German Pérez</h6>
+                  <small class="text-muted">SouFUN Co-funder</small>
+                  <p class="mt-3 text-muted ">Passionate about
+                    languages ​​and also
+                    programming languages. My strengths are Unity,
+                    Blender and Substance Painter, java and python.
+                    Programming is an art in which the limit is your imagination</p>
+                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
+                    <li><i class="fab fa-twitter mx-2"></i></li>
+                    <li><i class="fab fa-facebook-f mx-2"></i></li>
+                    <li><i class="fab fa-instagram mx-2"></i></li>
+                  </ul>
+                </div>
+
 
               </div>
               <!-- Grid column -->
