--- a/about.html
+++ b/about.html
@@ -209,7 +209,7 @@
                 <div class="mini-avatar mx-auto success">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
-                <div class="text-justify px-5">
+                <div class="text-center px-5">
                   <h6 class="font-weight-bold">German Pérez</h6>
                   <small class="text-muted">SouFUN Co-funder</small>
                   <p class="mt-3 text-muted ">Passionate about
