--- a/about.html
+++ b/about.html
@@ -203,13 +203,13 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-200 mx-auto mb-4">
+                <div class="w-200 mx-auto">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
                 <div class="mini-avatar mx-auto">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
-                <div class="text-center px-5 cyan darken-2">
+                <div class="text-center px-4">
                   <h6 class="font-weight-bold">German Pérez</h6>
                   <small class="text-muted">SouFUN Co-funder</small>
                   <p class="mt-3 text-muted ">Passionate about languages ​​and also programming languages.
