--- a/about.html
+++ b/about.html
@@ -204,12 +204,12 @@
               <div class="col-md-4 mb-4">
 
                 <div class="w-200 mx-auto">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
+                  <img src="/img/team/german-perez.jpg" class="img-fluid rounded mx-auto" alt="german-perez">
                 </div>
                 <div class="mini-avatar mx-auto">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
-                <div class="text-center px-4">
+                <div class="text-center px-5">
                   <h6 class="font-weight-bold">German Pérez</h6>
                   <small class="text-muted">SouFUN Co-funder</small>
                   <p class="mt-3 text-muted ">Passionate about languages ​​and also programming languages.
@@ -221,28 +221,28 @@
                     <li><i class="fab fa-instagram mx-2"></i></li>
                   </ul>
                 </div>
-
-
               </div>
               <!-- Grid column -->
 
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-200 mx-auto mb-4">
+                <div class="w-200 mx-auto">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
                 <div class="mini-avatar mx-auto">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
-                <h6 class="font-weight-bold">Tommy Brian</h6>
-                <small class="text-muted">Co-funder & CTO</small>
-                <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
-                <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
-                  <li><i class="fab fa-twitter mx-2"></i></li>
-                  <li><i class="fab fa-facebook-f mx-2"></i></li>
-                  <li><i class="fab fa-instagram mx-2"></i></li>
-                </ul>
+                <div class="text-center px-5">
+                  <h6 class="font-weight-bold">Tommy Brian</h6>
+                  <small class="text-muted">Co-funder & CTO</small>
+                  <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
+                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
+                    <li><i class="fab fa-twitter mx-2"></i></li>
+                    <li><i class="fab fa-facebook-f mx-2"></i></li>
+                    <li><i class="fab fa-instagram mx-2"></i></li>
+                  </ul>
+                </div>
 
               </div>
               <!-- Grid column -->
@@ -250,24 +250,24 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-200 mx-auto mb-4">
+                <div class="w-200 mx-auto">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(4).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
                 <div class="mini-avatar mx-auto">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
-                <h6 class="font-weight-bold">Kate Witson</h6>
-                <small class="text-muted">Lead Developer</small>
-                <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
-                <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
-                  <li><i class="fab fa-twitter mx-2"></i></li>
-                  <li><i class="fab fa-facebook-f mx-2"></i></li>
-                  <li><i class="fab fa-instagram mx-2"></i></li>
-                </ul>
-
+                <div class="text-center px-5">
+                  <h6 class="font-weight-bold">Kate Witson</h6>
+                  <small class="text-muted">Lead Developer</small>
+                  <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
+                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
+                    <li><i class="fab fa-twitter mx-2"></i></li>
+                    <li><i class="fab fa-facebook-f mx-2"></i></li>
+                    <li><i class="fab fa-instagram mx-2"></i></li>
+                  </ul>
+                </div>
               </div>
               <!-- Grid column -->
-
             </div>
             <!-- Grid row -->
 
@@ -276,71 +276,71 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-200 mx-auto mb-4">
+                <div class="w-200 mx-auto">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(7).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
                 <div class="mini-avatar mx-auto">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
-                <h6 class="font-weight-bold">Barbara Lenny</h6>
-                <small class="text-muted">Designer</small>
-                <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
-                <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
-                  <li><i class="fab fa-twitter mx-2"></i></li>
-                  <li><i class="fab fa-facebook-f mx-2"></i></li>
-                  <li><i class="fab fa-instagram mx-2"></i></li>
-                </ul>
-
+                <div class="text-center px-5">
+                  <h6 class="font-weight-bold">Barbara Lenny</h6>
+                  <small class="text-muted">Designer</small>
+                  <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
+                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
+                    <li><i class="fab fa-twitter mx-2"></i></li>
+                    <li><i class="fab fa-facebook-f mx-2"></i></li>
+                    <li><i class="fab fa-instagram mx-2"></i></li>
+                  </ul>
+                </div>
               </div>
               <!-- Grid column -->
 
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-200 mx-auto mb-4">
+                <div class="w-200 mx-auto">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(8).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
                 <div class="mini-avatar mx-auto">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
-                <h6 class="font-weight-bold">Barbara Lenny</h6>
-                <small class="text-muted">Designer</small>
-                <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
-                <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
-                  <li><i class="fab fa-twitter mx-2"></i></li>
-                  <li><i class="fab fa-facebook-f mx-2"></i></li>
-                  <li><i class="fab fa-instagram mx-2"></i></li>
-                </ul>
-
+                <div class="text-center px-5">
+                  <h6 class="font-weight-bold">Barbara Lenny</h6>
+                  <small class="text-muted">Designer</small>
+                  <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
+                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
+                    <li><i class="fab fa-twitter mx-2"></i></li>
+                    <li><i class="fab fa-facebook-f mx-2"></i></li>
+                    <li><i class="fab fa-instagram mx-2"></i></li>
+                  </ul>
+                </div>
               </div>
               <!-- Grid column -->
 
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-200 mx-auto mb-4">
+                <div class="w-200 mx-auto">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
                 <div class="mini-avatar mx-auto">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
-                <h6 class="font-weight-bold">Barbara Lenny</h6>
-                <small class="text-muted">Designer</small>
-                <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
-                <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
-                  <li><i class="fab fa-twitter mx-2"></i></li>
-                  <li><i class="fab fa-facebook-f mx-2"></i></li>
-                  <li><i class="fab fa-instagram mx-2"></i></li>
-                </ul>
-
+                <div class="text-center px-5">
+                  <h6 class="font-weight-bold">Barbara Lenny</h6>
+                  <small class="text-muted">Designer</small>
+                  <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
+                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
+                    <li><i class="fab fa-twitter mx-2"></i></li>
+                    <li><i class="fab fa-facebook-f mx-2"></i></li>
+                    <li><i class="fab fa-instagram mx-2"></i></li>
+                  </ul>
+                </div>
               </div>
               <!-- Grid column -->
 
             </div>
             <!-- Grid row -->
-
-
-
 
 
 
