implement about.html view

--- a/about.html
+++ b/about.html
@@ -203,7 +203,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-200 mx-auto">
+                <div class="wh-200 mx-auto">
                   <img src="/img/team/german-perez.jpg" class="img-fluid rounded mx-auto" alt="german-perez">
                 </div>
                 <div class="mini-avatar mx-auto">
@@ -227,7 +227,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-200 mx-auto">
+                <div class="wh-200 mx-auto">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
                 <div class="mini-avatar mx-auto">
@@ -250,7 +250,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-200 mx-auto">
+                <div class="wh-200 mx-auto">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(4).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
                 <div class="mini-avatar mx-auto">
@@ -276,7 +276,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-200 mx-auto">
+                <div class="wh-200 mx-auto">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(7).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
                 <div class="mini-avatar mx-auto">
@@ -298,7 +298,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-200 mx-auto">
+                <div class="wh-200 mx-auto">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(8).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
                 <div class="mini-avatar mx-auto">
@@ -320,7 +320,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-200 mx-auto">
+                <div class="wh-200 mx-auto">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
                 <div class="mini-avatar mx-auto">
