--- a/about.html
+++ b/about.html
@@ -212,7 +212,7 @@
                 <div class="text-center px-2">
                   <h6 class="font-weight-bold">German Pérez</h6>
                   <small class="text-muted">SouFUN Co-funder</small>
-                  <p class="mt-3 text-muted text-wrap" style="width: 10rem;">Passionate about languages ​​and also programming languages.
+                  <p class="mt-3 text-muted w-responsive">Passionate about languages ​​and also programming languages.
                     My strengths are Unity, Blender and Substance Painter, java and python.
                     Programming is an art in which the limit is your imagination.</p>
                   <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
