implement about.html view

--- a/about.html
+++ b/about.html
@@ -198,12 +198,12 @@
             <p class="lead text-center text-muted pt-2 mb-5">Enim ad minim exercitation ullamco laboris nisi ut ex aliquip.</p>
 
             <!-- Grid row -->
-            <div class="row text-center dark-grey-text my-5 px-3">
+            <div class="row text-center dark-grey-text my-5">
 
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="wh-200 mx-auto">
+                <div class="mx-auto">
                   <img src="/img/team/german-perez.jpg" class="img-fluid rounded mx-auto" alt="german-perez">
                 </div>
                 <div class="mini-avatar mx-auto">
@@ -225,7 +225,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="wh-200 mx-auto">
+                <div class="mx-auto">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
                 <div class="mini-avatar mx-auto">
@@ -248,7 +248,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="wh-200 mx-auto">
+                <div class="mx-auto">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(4).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
                 <div class="mini-avatar mx-auto">
@@ -274,7 +274,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="wh-200 mx-auto">
+                <div class="mx-auto">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(7).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
                 <div class="mini-avatar mx-auto">
@@ -296,7 +296,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="wh-200 mx-auto">
+                <div class="mx-auto">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(8).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
                 <div class="mini-avatar mx-auto">
@@ -318,7 +318,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="wh-200 mx-auto">
+                <div class="mx-auto">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
                 <div class="mini-avatar mx-auto">
