implement about.html view

--- a/about.html
+++ b/about.html
@@ -211,9 +211,11 @@
                 </div>
                 <h6 class="font-weight-bold">German Pérez</h6>
                 <small class="text-muted">SouFUN Co-funder</small>
-                <p class="mt-3 text-muted w-responsive">Passionate about languages ​​and also programming languages.
-                  My strengths are Unity, Blender and Substance Painter, java and python.
-                  Programming is an art in which the limit is your imagination.</p>
+                <p class="mt-3 text-muted w-responsive">Passionate about languages ​​and also
+                  programming languages. My strengths are
+                  Unity, Blender and Substance Painter, java
+                  and python. Programming is an art in which
+                  the limit is your imagination.</p>
                 <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
                   <li><i class="fab fa-twitter mx-2"></i></li>
                   <li><i class="fab fa-facebook-f mx-2"></i></li>
