--- a/about.html
+++ b/about.html
@@ -236,7 +236,11 @@
                 <div class="text-center px-2">
                   <h6 class="font-weight-bold">Tommy Brian</h6>
                   <small class="text-muted">Co-funder & CTO</small>
-                  <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
+                  <p class="mt-3 text-muted">Passionate about languages ​​and also
+                    programming languages. My strengths are
+                    Unity, Blender and Substance Painter, java
+                    and python. Programming is an art in which
+                    the limit is your imagination.</p>
                   <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
                     <li><i class="fab fa-twitter mx-2"></i></li>
                     <li><i class="fab fa-facebook-f mx-2"></i></li>
