implement about.html view

--- a/about.html
+++ b/about.html
@@ -186,10 +186,6 @@
             </div>
             <!--Grid row-->
 
-
-
-
-
             <h6 class="font-weight-bold text-center grey-text text-uppercase small mb-4">Team</h6>
             <!-- Section heading -->
             <h2 class=" text-center dark-grey-text pb-2">Our Team</h2>
@@ -210,8 +206,8 @@
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <div class="text-center px-2">
-                  <h6 class="font-weight-bold">Tommy Brian</h6>
-                  <small class="text-muted">Co-funder & CTO</small>
+                  <h6 class="font-weight-bold">German Perez</h6>
+                  <small class="text-muted">SouFUN Co-funder</small>
                   <p class="mt-3 text-muted">Passionate about languages ​​and also
                     programming languages. My strengths are
                     Unity, Blender and Substance Painter, java
@@ -315,11 +311,14 @@
                   <h6 class="font-weight-bold">Barbara Lenny</h6>
                   <small class="text-muted">Designer</small>
                   <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
-                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
-                    <li><i class="fab fa-twitter mx-2"></i></li>
-                    <li><i class="fab fa-facebook-f mx-2"></i></li>
-                    <li><i class="fab fa-instagram mx-2"></i></li>
-                  </ul>
+                  <div class="hoverable-icon">
+                    <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 dark-text">
+                      <li><a href="https://twitter.com/kodokushinku"><i class="fab fa-twitter mx-2"></i></a></li>
+                      <li><a href="https://www.facebook.com/gerdav2926?ref=bookmarks"><i class="fab fa-facebook-f mx-2"></i></a></li>
+                      <li><a href="https://www.instagram.com/ger_dav/"><i class="fab fa-instagram mx-2"></i></a></li>
+                      <li><a href="https://github.com/Kodoku-Shinku"><i class="fab fa-github mx-2"></i></a></li>
+                    </ul>
+                  </div>
                 </div>
               </div>
               <!-- Grid column -->
@@ -345,25 +344,12 @@
                 </div>
               </div>
               <!-- Grid column -->
-
             </div>
             <!-- Grid row -->
-
-
-
-
           </div>
           <!--Card-->
         </section>
         <!--Section: Content-->
-
-
-
-
-
-
-
-
       </div>
       <!--About container-->
     </div>
