implement about.html view

--- a/about.html
+++ b/about.html
@@ -199,7 +199,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="mx-auto">
+                <div class="wh-200 mx-auto">
                   <img src="/img/team/german-perez.jpg" class="img-fluid rounded mx-auto" alt="photo-g">
                 </div>
                 <div class="mini-avatar mx-auto">
@@ -214,10 +214,10 @@
                     and python. Programming is an art in which
                     the limit is your imagination.</p>
                   <ul class="list-unstyled social-icon d-flex justify-content-center mt-3 mb-0">
-                    <li><a href="https://twitter.com/kodokushinku" target="_blank"><i class="fab fa-twitter mx-2"></i></a></li>
-                    <li><a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank"><i class="fab fa-facebook-f mx-2"></i></a></li>
-                    <li><a href="https://www.instagram.com/ger_dav/" target="_blank"><i class="fab fa-instagram mx-2"></i></a></li>
-                    <li><a href="https://github.com/Kodoku-Shinku" target="_blank"><i class="fab fa-github mx-2"></i></a></li>
+                    <li><a href="https://twitter.com/kodokushinku" target="_blank"><i class="fab fa-twitter mx-2 text-muted"></i></a></li>
+                    <li><a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank"><i class="fab fa-facebook-f mx-2 text-muted"></i></a></li>
+                    <li><a href="https://www.instagram.com/ger_dav/" target="_blank"><i class="fab fa-instagram mx-2 text-muted"></i></a></li>
+                    <li><a href="https://github.com/Kodoku-Shinku" target="_blank"><i class="fab fa-github mx-2 text-muted"></i></a></li>
                   </ul>
                 </div>
 
