implement about.html view

--- a/about.html
+++ b/about.html
@@ -194,13 +194,97 @@
             <p class="lead text-center text-muted pt-2 mb-5">Enim ad minim exercitation ullamco laboris nisi ut ex aliquip.</p>
 
             <!-- Grid row -->
-            <div class="row text-center dark-grey-text my-5">
+            <div class="row text-center dark-grey-text my-5" id="social">
 
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
                 <div class="mx-auto">
                   <img src="/img/team/german-perez.jpg" class="img-fluid rounded mx-auto" alt="photo-g">
+                </div>
+                <div class="mini-avatar mx-auto">
+                  <img src="/img/brand/soufun-solid-logo.png" class="img-fluid rounded-circle mx-auto" alt="smaple image">
+                </div>
+                <div class="text-center px-2">
+                  <h6 class="font-weight-bold">German Perez</h6>
+                  <small class="text-muted">SouFUN Co-funder</small>
+                  <p class="mt-3 text-muted">Passionate about languages ​​and also
+                    programming languages. My strengths are
+                    Unity, Blender and Substance Painter, java
+                    and python. Programming is an art in which
+                    the limit is your imagination.</p>
+                  <ul class="list-unstyled social-icon d-flex justify-content-center mt-3 mb-0 cyan-text">
+                    <li><a href="https://twitter.com/kodokushinku" target="_blank"><i class="fab fa-twitter mx-2"></i></a></li>
+                    <li><a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank"><i class="fab fa-facebook-f mx-2"></i></a></li>
+                    <li><a href="https://www.instagram.com/ger_dav/" target="_blank"><i class="fab fa-instagram mx-2"></i></a></li>
+                    <li><a href="https://github.com/Kodoku-Shinku" target="_blank"><i class="fab fa-github mx-2"></i></a></li>
+                  </ul>
+                </div>
+
+              </div>
+              <!-- Grid column -->
+
+              <!-- Grid column -->
+              <div class="col-md-4 mb-4">
+
+                <div class="mx-auto">
+                  <img src="/img/team/roberto-torres.jpg" class="img-fluid rounded mx-auto" alt="photo-r">
+                </div>
+                <div class="mini-avatar mx-auto">
+                  <img src="/img/brand/soufun-solid-logo.png" class="img-fluid rounded-circle mx-auto" alt="smaple image">
+                </div>
+                <div class="text-center px-2">
+                  <h6 class="font-weight-bold">Tommy Brian</h6>
+                  <small class="text-muted">Co-funder & CTO</small>
+                  <p class="mt-3 text-muted">Passionate about languages ​​and also
+                    programming languages. My strengths are
+                    Unity, Blender and Substance Painter, java
+                    and python. Programming is an art in which
+                    the limit is your imagination.</p>
+                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 cyan-text">
+                    <li><a href="https://twitter.com/kodokushinku" target="_blank"><i class="fab fa-twitter mx-2"></i></a></li>
+                    <li><a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank"><i class="fab fa-facebook-f mx-2"></i></a></li>
+                    <li><a href="https://www.instagram.com/ger_dav/" target="_blank"><i class="fab fa-instagram mx-2"></i></a></li>
+                    <li><a href="https://github.com/Kodoku-Shinku" target="_blank"><i class="fab fa-github mx-2"></i></a></li>
+                  </ul>
+                </div>
+
+              </div>
+              <!-- Grid column -->
+
+              <!-- Grid column -->
+              <div class="col-md-4 mb-4">
+
+                <div class="mx-auto">
+                  <img src="/img/team/eli-roots.jpg" class="img-fluid rounded mx-auto" alt="photo-e">
+                </div>
+                <div class="mini-avatar mx-auto">
+                  <img src="/img/brand/soufun-solid-logo.png" class="img-fluid rounded-circle mx-auto" alt="smaple image">
+                </div>
+                <div class="text-center px-2">
+                  <h6 class="font-weight-bold">Kate Witson</h6>
+                  <small class="text-muted">Lead Developer</small>
+                  <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
+                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 cyan-text">
+                    <li><a href="https://twitter.com/kodokushinku" target="_blank"><i class="fab fa-twitter mx-2"></i></a></li>
+                    <li><a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank"><i class="fab fa-facebook-f mx-2"></i></a></li>
+                    <li><a href="https://www.instagram.com/ger_dav/" target="_blank"><i class="fab fa-instagram mx-2"></i></a></li>
+                    <li><a href="https://github.com/Kodoku-Shinku" target="_blank"><i class="fab fa-github mx-2"></i></a></li>
+                  </ul>
+                </div>
+              </div>
+              <!-- Grid column -->
+            </div>
+            <!-- Grid row -->
+
+            <!-- Grid row -->
+            <div class="row text-center dark-grey-text my-5">
+
+              <!-- Grid column -->
+              <div class="col-md-4 mb-4">
+
+                <div class="mx-auto">
+                  <img src="/img/team/keyla-avila.jpg" class="img-fluid rounded mx-auto" alt="photo-k">
                 </div>
                 <div class="mini-avatar mx-auto">
                   <img src="/img/brand/soufun-solid-logo.png" class="img-fluid rounded-circle mx-auto" alt="smaple image">
@@ -228,7 +312,7 @@
               <div class="col-md-4 mb-4">
 
                 <div class="mx-auto">
-                  <img src="/img/team/roberto-torres.jpg" class="img-fluid rounded mx-auto" alt="smaple image">
+                  <img src="/img/team/victor-sarabia.jpg" class="img-fluid rounded mx-auto" alt="photo-v">
                 </div>
                 <div class="mini-avatar mx-auto">
                   <img src="/img/brand/soufun-solid-logo.png" class="img-fluid rounded-circle mx-auto" alt="smaple image">
@@ -241,92 +325,11 @@
                     Unity, Blender and Substance Painter, java
                     and python. Programming is an art in which
                     the limit is your imagination.</p>
-                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
-                    <li><i class="fab fa-twitter mx-2"></i></li>
-                    <li><i class="fab fa-facebook-f mx-2"></i></li>
-                    <li><i class="fab fa-instagram mx-2"></i></li>
-                  </ul>
-                </div>
-
-              </div>
-              <!-- Grid column -->
-
-              <!-- Grid column -->
-              <div class="col-md-4 mb-4">
-
-                <div class="mx-auto">
-                  <img src="/img/team/eli-roots.png" class="img-fluid rounded mx-auto" alt="smaple image">
-                </div>
-                <div class="mini-avatar mx-auto">
-                  <img src="/img/brand/soufun-solid-logo.png" class="img-fluid rounded-circle mx-auto" alt="smaple image">
-                </div>
-                <div class="text-center px-2">
-                  <h6 class="font-weight-bold">Kate Witson</h6>
-                  <small class="text-muted">Lead Developer</small>
-                  <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
-                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
-                    <li><i class="fab fa-twitter mx-2"></i></li>
-                    <li><i class="fab fa-facebook-f mx-2"></i></li>
-                    <li><i class="fab fa-instagram mx-2"></i></li>
-                  </ul>
-                </div>
-              </div>
-              <!-- Grid column -->
-            </div>
-            <!-- Grid row -->
-
-            <!-- Grid row -->
-            <div class="row text-center dark-grey-text my-5">
-
-              <!-- Grid column -->
-              <div class="col-md-4 mb-4">
-
-                <div class="mx-auto">
-                  <img src="/img/team/keyla-avila.jpg" class="img-fluid rounded mx-auto" alt="photo-g">
-                </div>
-                <div class="mini-avatar mx-auto">
-                  <img src="/img/brand/soufun-solid-logo.png" class="img-fluid rounded-circle mx-auto" alt="smaple image">
-                </div>
-                <div class="text-center px-2">
-                  <h6 class="font-weight-bold">German Perez</h6>
-                  <small class="text-muted">SouFUN Co-funder</small>
-                  <p class="mt-3 text-muted">Passionate about languages ​​and also
-                    programming languages. My strengths are
-                    Unity, Blender and Substance Painter, java
-                    and python. Programming is an art in which
-                    the limit is your imagination.</p>
-                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0">
-                    <li><a href="https://twitter.com/kodokushinku" target="_blank"><i class="fab fa-twitter mx-2 cyan-text"></i></a></li>
-                    <li><a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank"><i class="fab fa-facebook-f mx-2 cyan-text"></i></a></li>
-                    <li><a href="https://www.instagram.com/ger_dav/" target="_blank"><i class="fab fa-instagram mx-2 cyan-text"></i></a></li>
-                    <li><a href="https://github.com/Kodoku-Shinku" target="_blank"><i class="fab fa-github mx-2 cyan-text"></i></a></li>
-                  </ul>
-                </div>
-
-              </div>
-              <!-- Grid column -->
-
-              <!-- Grid column -->
-              <div class="col-md-4 mb-4">
-
-                <div class="mx-auto">
-                  <img src="/img/team/victor-sarabia.jpg" class="img-fluid rounded mx-auto" alt="smaple image">
-                </div>
-                <div class="mini-avatar mx-auto">
-                  <img src="/img/brand/soufun-solid-logo.png" class="img-fluid rounded-circle mx-auto" alt="smaple image">
-                </div>
-                <div class="text-center px-2">
-                  <h6 class="font-weight-bold">Tommy Brian</h6>
-                  <small class="text-muted">Co-funder & CTO</small>
-                  <p class="mt-3 text-muted">Passionate about languages ​​and also
-                    programming languages. My strengths are
-                    Unity, Blender and Substance Painter, java
-                    and python. Programming is an art in which
-                    the limit is your imagination.</p>
-                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
-                    <li><i class="fab fa-twitter mx-2"></i></li>
-                    <li><i class="fab fa-facebook-f mx-2"></i></li>
-                    <li><i class="fab fa-instagram mx-2"></i></li>
+                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 cyan-text">
+                    <li><a href="https://twitter.com/kodokushinku" target="_blank"><i class="fab fa-twitter mx-2"></i></a></li>
+                    <li><a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank"><i class="fab fa-facebook-f mx-2"></i></a></li>
+                    <li><a href="https://www.instagram.com/ger_dav/" target="_blank"><i class="fab fa-instagram mx-2"></i></a></li>
+                    <li><a href="https://github.com/Kodoku-Shinku" target="_blank"><i class="fab fa-github mx-2"></i></a></li>
                   </ul>
                 </div>
 
