implement about.html view

--- a/about.html
+++ b/about.html
@@ -234,13 +234,13 @@
                   <img src="/img/brand/soufun-solid-logo.png" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <div class="text-center px-2">
-                  <h6 class="font-weight-bold">Tommy Brian</h6>
-                  <small class="text-muted">Co-funder & CTO</small>
-                  <p class="mt-3 text-muted">Passionate about languages ​​and also
-                    programming languages. My strengths are
-                    Unity, Blender and Substance Painter, java
-                    and python. Programming is an art in which
-                    the limit is your imagination.</p>
+                  <h6 class="font-weight-bold">Roberto Torres</h6>
+                  <small class="text-muted">SouFUN Co-funder</small>
+                  <p class="mt-3 text-muted">Game Developer, program
+                    whatever it takes to
+                    create amazing things.
+                    I'm good at Unity 3D,
+                    Java, Python.</p>
                   <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 cyan-text">
                     <li><a href="https://twitter.com/kodokushinku" target="_blank"><i class="fab fa-twitter mx-2"></i></a></li>
                     <li><a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank"><i class="fab fa-facebook-f mx-2"></i></a></li>
